# PGPy

./: .SRCINFO  .coveragerc  .editorconfig  .gitignore  .readthedocs.yaml  .travis.yml  Brewfile  LICENSE  MANIFEST.in  PKGBUILD  README.md  README.rst  install_dependencies.linux.sh  install_dependencies.osx.sh  pgpy-0.3.0.ebuild  pgpy-0.4.0.ebuild  pgpy-0.4.1.ebuild  pyproject.toml  requirements-dev.txt  requirements-rtd.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test_load_asc_bench.py  test_load_paul_pubring.py  tox.ini  tox.sh
.github/workflows/: tests.yml
arch/: PKGBUILD
debian/: changelog  clean  control  copyright  gbp.conf  py3dist-overrides  python-pgpy-doc.docs  python-pgpy-doc.install  python-pgpy.pydist  python3-pgpy-doc.doc-base  python3-pgpy-doc.docs  python3-pgpy-doc.examples  python3-pgpy-doc.links  python3-pgpy.pydist  rules  watch
debian/patches/: 0001-Use-gpg-instead-of-gpg2-in-the-tests.patch  0001-gpg-is-finnicky-sometimes.patch  0002-217-fix-for-six-1.11.0.patch  0002-Use-ephemeral-socketdir-where-possible.patch  0002-facepalm.patch  0003-172-correctly-calculate-the-secret-key-checksum.patch  0003-Fix-bogus-print-in-PGPKey.__copy__.patch  0003-Fix-sphinx-warnings-about-IDEA-documentation.patch  0004-172-regression-test-added.patch  0004-Permit-skipping-cross-signing-unless-strictly-requir.patch  0004-RIPEMD160-is-no-longer-accessible-through-cryptograp.patch  0005-228-remove-default-armor-header-to-avoid-leaking-unn.patch  0005-IssuerFingerprint-include-spec-and-update-length-for.patch  0006-fixed-parsing-of-User-IDs-that-include-multibyte-utf.patch  0006-types-Unarmor-76-character-long-lines.patch  0007-226-fixed-incomplete-subkey-revocation-signature-cal.patch  0007-progress.rst-Updating-Ed25519-status.patch  0008-Avoid-using-the-better-sphinx-theme.patch  0008-tests-avoid-references-to-gpg.Context-after-deletion.patch  0009-When-Signature-Creation-Time-is-supplied-use-UTC.patch  series
debian/tests/: control
debian/upstream/: metadata
dev-python/enum34/: enum34-1.0.ebuild
dev-python/pgpy/: pgpy-0.2.3.ebuild
docs/: Makefile
docs/source/: api.rst  changelog.rst  conf.py  examples.rst  index.rst  installation.rst  progress.rst  using_pgpy.rst
docs/source/_ext/: __init__.py  js_progress.py  progress.py
docs/source/_static/: jquery-ui.min.css  jquery-ui.min.js  jquery-ui.theme.min.css  pgpy_better.css  progress.css  progress.js
docs/source/api/: Exceptions.rst  Objects.rst  PGPKeyring.rst  SignatureVerification.rst  classes.rst  classes.rst.inc  constants.rst  constants.rst.inc  exceptions.rst  index.rst  modules.rst  objects.rst  pgpy.rst
docs/source/examples/: actions.rst  exporting.rst  keys.rst  messages.rst
gentoo/: metadata.xml  pgpy-0.3.0.ebuild  pgpy-0.4.0.ebuild
gentoo/dev-python/enum34/: Manifest  metadata.xml
gentoo/dev-python/pgpy/: Manifest  metadata.xml
pgpy/: __init__.py  _author.py  _curves.py  constants.py  decorators.py  errors.py  fileloader.py  key.py  keys.py  memoryview.py  pgp.py  pgp1.py  pgpdump.py  reg.py  signature.py  sopgpy.py  symenc.py  types.py  util.py  utils.py
pgpy/packet/: __init__.py  fields.py  keyfields.py  packets.py  pftypes.py  pgpdump.py  subpackets.py  types.py
pgpy/packet/fields/: fields.py  keyfields.py  types.py
pgpy/packet/subpackets/: __init__.py  signature.py  types.py  userattribute.py
tests/: bug_56.py  conftest.py  fixtures.py  no_1_FileLoader.py  no_3_PGPSignature.py  test_00_exports.py  test_01_packetfields.py  test_01_types.py  test_02_packets.py  test_03_armor.py  test_04_PGPKeyring.py  test_04_PGP_objects.py  test_04_copy.py  test_05_actions.py  test_06_compatibility.py  test_06_unicode.py  test_0_exports.py  test_10_exceptions.py  test_11_userids.py  test_12_crypto_refresh.py  test_13_version_and_pubkey.py  test_1_FileLoader.py  test_1_packetfields.py  test_1_subpackets.py  test_2_PGPSignature.py  test_2_packets.py  test_3_PGPKeys.py  test_3_actions.py  test_3_armor.py  test_4_PGPKey.py  test_4_PGPKeyring.py  test_4_actions.py  test_5_PGPKeyring.py  test_5_actions.py  test_99_regressions.py  test_FileLoader.py  test_PGPKeyCollection.py  test_PGPKeyLoader.py  test_PGPKeyring.py  test_PGPKeys.py  (+1 more)
tests/gnupghome/: gpg.conf
tests/testdata/: Debian.Sid.Release.gpg  Release.gpg  TestDSA.key  TestDSA.sec.key  TestDSAKey-1024.asc  TestDSAandElGamal-1024.asc  TestDSAandElGamal.key  TestKeyDecryption-DSA-1024.asc  TestKeyDecryption-DSASignOnly-1024.asc  TestProtected.key  TestProtected.key.passphrase  TestProtected.sec.key  TestRSAPair.key  TestRSASignOnly.key  TestRSASignOnly.sec.key  cdimage_ubuntu_2012.key  debutils.gpg  debutils.key  debutils.sec.gpg  example_1.0-1_all.deb  generate_keyrings.sh  generate_keys.sh  generate_multikey.sh  generate_signatures.sh  gpg.sh  gpg_sign_and_verify.sh  gpg_verify.sh  inline_signed_message  inline_signed_message.asc  lit  lit_de  lit_de.asc  message.enc.twofish.asc  need.txt  nonsense.asc  pgpy.gpg.conf  pubtest.asc  sectest.asc  signed_message  signed_message.asc  (+7 more)
tests/testdata/aa-testing/: Release.gpg
tests/testdata/blocks/: armoredfile.asc  dsapubkey.asc  dsaseckey.asc  eccpubkey.asc  eccseckey.asc  expyro.asc  message.asc  message.ascii.asc  message.encrypted.asc  message.encrypted.signed.asc  message.literal.asc  message.onepass.asc  message.signed.asc  message.two_onepass.asc  openpgp.js.asc  openpgp.js.pubkey.asc  openpgp.js.seckey.asc  rsapubkey.asc  rsaseckey.asc  rsasignature.asc  signature.expired.asc  signature.non-exportable.asc
tests/testdata/compatibility/: bob.pgp  bob_with_unknown_alg_certification.pgp  bob_with_unknown_ecdh_curve.pgp  bob_with_unknown_ecdsa_curve.pgp  bob_with_unknown_eddsa_curve.pgp  bob_with_unknown_subkey_algorithm.pgp  encrypted_signed_with_unknown_algorithm.msg  encrypted_signed_with_unknown_signature_version.msg  pkesk_unknown_pkalg.msg  pkesk_unknown_version.msg  ricarda.pgp  sig23_sig4.sig  sig4_b-sig4_r.sig  sig4_r-sig4_b.sig  sig4_sig23.sig  skesk_unknown_s2k_algo.msg  skesk_unknown_version.msg
tests/testdata/crypto-refresh/: cleartext-signed-message.txt  (+5 more)
(+386 files in other folders)
