[metadata]
name = PGPy
version = 0.6.0-dev
author = Michael Greene
author_email = mgreene@securityinnovation.com
maintainer = Security Innovation
maintainer_email = opensource@securityinnovation.com
license = BSD-3-Clause
description = Pretty Good Privacy for Python
keywords = OpenPGP, PGP, Pretty Good Privacy, GPG, GnuPG, openpgp, pgp, gnupg, gpg, encryption, signature
url = https://github.com/SecurityInnovation/PGPy
project_urls =
    Documentation = https://pgpy.readthedocs.io/en/latest/
    Bug Tracker = https://github.com/SecurityInnovation/PGPy/issues
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Security
    Topic :: Security :: Cryptography
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: BSD License

[options]
packages =
    pgpy
    pgpy.packet
    pgpy.packet.subpackets
install_requires = 
    cryptography>=2.6
    pyasn1
    six>=1.9.0
python_requires = >=3.5

# doc_requires =
#    sphinx
#    sphinx-better-theme


[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1
