[metadata]
name = PGPy
version = 0.6.0
author = Michael Greene
author_email = mgreene@securityinnovation.com
maintainer = Security Innovation
maintainer_email = opensource@securityinnovation.com
license = BSD-3-Clause
description = Pretty Good Privacy for Python
keywords = OpenPGP, PGP, Pretty Good Privacy, GPG, GnuPG, openpgp, pgp, gnupg, gpg, encryption, signature
url = https://github.com/SecurityInnovation/PGPy
project_urls =
    Documentation = https://pgpy.readthedocs.io/en/latest/
    Bug Tracker = https://github.com/SecurityInnovation/PGPy/issues
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Security
    Topic :: Security :: Cryptography
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: BSD License

[options]
packages =
    pgpy
    pgpy.packet
    pgpy.packet.subpackets
# TODO: fix support for cryptography >= 38.0.0 (https://github.com/SecurityInnovation/PGPy/issues/402)
install_requires =
    argon2_cffi
    cryptography>=3.3.2
python_requires = >=3.6

# doc_requires =
#    sphinx
#    sphinx-better-theme

[options.extras_require]
sopgpy = sop>=0.5.1
eax = pycryptodomex

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1

[options.entry_points]
console_scripts =
    sopgpy = pgpy.sopgpy:main
